--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-
+target/
+.idea/
+.project
+.classpath
+*.class
+*.log
+.DS_Store
+Thumbs.db
+.mvn/
+mvnw
+mvnw.cmd
+*.iml
+.vscode/
+*.tmp
+*.swp
